--- a/boards/arm/zices_mesh/Kconfig
+++ b/boards/arm/zices_mesh/Kconfig
@@ -6,7 +6,7 @@
 
 # Kconfig - KNoT Mesh board configuration
 #
-# Copyright (c) 2019 CESAR
+# Copyright (c) 2022 ICES
 # Copyright (c) 2018 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: Apache-2.0
