--- a/boards/arm/zices_mesh/zices_mesh.dts
+++ b/boards/arm/zices_mesh/zices_mesh.dts
@@ -76,12 +76,28 @@
 	status ="ok";
 };
 
+/*
+ * Map UART0 to unused pins to avoid conflits with logger in
+ * serial communication and map UART1 to external pins to be
+ * used with UART devices.
+ */
+
 &uart0 {
+	compatible = "nordic,nrf-uarte";
+	current-speed = <115200>;
+	status = "ok";
+	tx-pin = <10>;
+	rx-pin = <11>;
+};
+
+&uart1 {	
 	compatible = "nordic,nrf-uarte";
 	current-speed = <115200>;
 	status = "ok";
 	tx-pin = <6>;
 	rx-pin = <8>;
+	rts-pin = <43>;
+	cts-pin = <44>;	
 };
 
 &adc {
@@ -90,8 +106,14 @@
 
 &i2c0 {
 	status = "ok";
-	sda-pin = <58>;
-	scl-pin = <59>;
+	sda-pin = <26>;
+	scl-pin = <27>;
+};
+
+&pwm0 {
+	status = "ok";
+	ch0-pin = <3>;
+	ch0-inverted;
 };
 
 /*
